# n2wos-cuda

./: .gitignore  CMakeLists.txt  CMakeLists.txt.rej  CMakePresets.json  README.md  memo.md
cmake/: Dependencies.cmake
configs/experiments/: eval_tcnn_nc_wos_default.json  eval_wavefront_wos_default.json  nc_2lmc_interior_signal_sweep.json  nc_cache_sanity_default.json  nc_cache_slice_visualization_default.json  nc_depth_sweep_default.json  nc_slice_allocation_sweep_default.json  nc_slice_depth_sweep_default.json  nc_slice_reference_cache_quality_sweep_default.json  nc_slice_reference_time_to_mse_default.json  nc_slice_time_to_mse_default.json  nc_texture_depth_matrix_default.json  nc_visualization_postprocess_default.json  probe_cuda_bvh_default.json  probe_geometry_backends_default.json  probe_tcnn_cache_default.json  progressive_snapshot_accounting_default.json  reference_spatial_frequency_scan_default.json  render_harmonic_slice_default.json  unfinished_cache_sweep_default.json  wavefront_oracle_multiseed_default.json  wavefront_oracle_sweep_default.json
docs/: field_visualization_policy.md  geometry_backend_policy.md  harmonic_mixture_boundaries.md  harmonic_mixture_multiscale.md  implementation_integrity_policy.md  nc_2lmc_efficiency_audit.md  nc_cache_sanity_policy.md  nc_cache_slice_visualization_policy.md  nc_depth_sweep_policy.md  nc_result_collection.md  nc_slice_allocation_and_launch_policy.md  nc_slice_benchmark_policy.md  nc_slice_time_to_mse_policy.md  nc_texture_depth_matrix_policy.md  nc_visualization_policy.md  nc_wos_policy.md  paper_like_nc_training_policy.md  poisson_manufactured_wos.md  progressive_snapshot_accounting_policy.md  reference_cache_quality_sweep_policy.md  reference_slice_benchmark_policy.md  reference_spatial_frequency_scan_policy.md  slice_figure_workflow.md  tcnn_cache_policy.md  unfinished_cache_policy.md  wos_wavefront_policy.md
figures/: bunny_charges_shell_k8_2lmc_error_colorbar.json  bunny_charges_shell_k8_2lmc_error_texture.json  bunny_charges_shell_k8_error_colorbar.json  bunny_charges_shell_k8_gt_colorbar.json  bunny_charges_shell_k8_gt_texture.json  bunny_charges_shell_k8_nc_error_texture.json  bunny_hmix_figlike_gt_colorbar.json  bunny_hmix_figlike_gt_texture.json  bunny_hmix_figlike_nc_error_colorbar.json  bunny_hmix_figlike_nc_error_texture.json  bunny_hmix_multiscale_gt_colorbar.json  bunny_hmix_multiscale_gt_texture.json  bunny_nc_slice_exact_zebra_k8_z012_error_colorbar.json  bunny_nc_slice_exact_zebra_k8_z012_error_texture.json  bunny_poisson_multiscale_gt_colorbar.json  bunny_poisson_multiscale_gt_texture.json  bunny_shell_charges_medium_k8_gt_colorbar.json  bunny_shell_charges_medium_k8_gt_texture.json  bunny_zebra_k8_m2.json  bunny_zebra_k8_m2_slice_mask.ppm  nc_slice_exact_zebra_k8_error_colorbar.json  zebra_k8_m2.json  zebra_k8_m2_slice_mask.ppm  zebra_k8_nc_colorbar.json  zebra_k8_nc_texture.json
figures/poisson_figlike_hf/: error_colorbar.json  field_wosrun_colorbar.json  gt_wosrun_texture.json  nc_wos_error_texture.json
figures/poisson_figlike_hf_x5/: field_colorbar.json  gt_texture.json
include/n2wos/: closest_point.hpp  cubql_bvh.hpp  cuda_bvh.hpp  json.hpp  mesh.hpp  nc_harmonic_mixture.hpp  nc_harmonic_mixture.hpp.pre_hmix_multiscale  nc_poisson_manufactured.hpp  tcnn_nc_wos.hpp  tcnn_nc_wos.hpp.bak  tcnn_nc_wos.hpp.pre_hmix_multiscale  tcnn_nc_wos.hpp.pre_poisson  types.hpp  wos_wavefront.hpp
meshes/: README.md  bunny_zipper_wataertight.ply
scripts/: apply_harmonic_mixture_boundary_patch.py  apply_harmonic_mixture_multiscale_patch.py  apply_manufactured_poisson_patch.py  apply_poisson_figlike_hf_x5_patch.py  audit_nc_2lmc_efficiency.py  collect_experiment_bundle.py  collect_nc_results.py  fetch_cubql.py  fetch_tcnn.py  fix_harmonic_mixture_runtime_registration.py  generate_nc_visualizations.py  render_nc_cache_slice.py  render_slice_figure.py  run_bunny_harmonic_mixture_multiscale_smoke.sh  run_bunny_harmonic_mixture_smoke.sh  run_bunny_poisson_2lmc_smoke.sh  run_bunny_poisson_figlike_hf_x5_smoke.sh  run_bunny_poisson_smoke.sh  run_nc_cache_sanity.py  run_nc_depth_sweep.py  run_nc_interior_signal_sweep.py  run_nc_slice_allocation_sweep.py  run_nc_slice_depth_sweep.py  run_nc_slice_reference_cache_sweep.py  run_nc_slice_reference_time_to_mse.py  run_nc_slice_time_to_mse.py  run_nc_texture_depth_matrix.py  run_nc_visualization_postprocess.py  run_overnight_bunny_z012_sweep.sh  run_progressive_snapshot_accounting.py  run_reference_spatial_frequency_scan.py  run_unfinished_cache_sweep.py  run_wavefront_oracle_multiseed.py  run_wavefront_oracle_sweep.py
src/cuda/: bvh_build_host.cpp  bvh_query.cu  bvh_types.cuh  cubql_bvh.cu  cubql_bvh.cu.bak  cubql_bvh.cu.before_poisson_Am_direct_fix  cubql_bvh.cu.before_poisson_manual_fix  cubql_bvh.cu.before_x5_registration_fix  cubql_bvh.cu.before_x5_runtime_fix  cubql_bvh.cu.pre_hmix_fix  cubql_bvh.cu.pre_hmix_multiscale  cubql_bvh.cu.pre_poisson  wos_wavefront.cu
src/geometry/: closest_point.cpp
src/mesh/: normalize.cpp  obj_loader.cpp  ply_loader.cpp  procedural_bumpy_sphere.cpp
src/tools/: eval_tcnn_nc_wos.cu  eval_tcnn_nc_wos.cu.before_poisson_manual_fix  eval_tcnn_nc_wos.cu.pre_hmix_multiscale  eval_tcnn_nc_wos.cu.pre_poisson  eval_wavefront_wos.cu  probe_cuda_bvh.cpp  probe_geometry_backends.cu  probe_tcnn_cache.cu  render_harmonic_slice.cu
